Documentation added. Rearrange is now asynchronous.

--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,20 @@
 {
   "name": "Perffect",
-  "main": "Perffect.js",
-  "author": "alefwmm",
-  "version": "0.0.2",
+  "version": "0.0.1",
+  "homepage": "https://github.com/alefwmm/Perffect",
+  "authors": [
+    "Álef Miranda <alefwmm@gmail.com>"
+  ],
+  "description": "An easy to use layout tool",
+  "main": "dist/Perffect.min.js",
+  "keywords": [
+    "layout",
+    "responsive",
+    "masonry",
+    "grid",
+    "isotope",
+    "fixed-width"
+  ],
   "license": "MIT",
   "ignore": [
     "**/.*",
@@ -12,6 +24,6 @@
     "tests"
   ],
   "dependencies": {
-    "Resizer": "alefwmm/Resizer"
+    "Resizer": "alefwmm/Resizer#~0.0.1"
   }
 }
